objects/Blood_Coordination__c.object
<CustomObject>
    <label>Blood Coordination</label>
    <nameField>
        <displayFormat>BC-{00000}</displayFormat>
        <label>Blood Coordination Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blood Coordinations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Donar__c</fullName>
        <label>Donar</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Blood_Donar__c.Eligible_for_Blood_Donation__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Blood_Donar__c.Age__c</field>
                <operation>lessThan</operation>
                <value>25</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Blood_Donar__c</referenceTo>
        <relationshipLabel>Blood Coordinations</relationshipLabel>
        <relationshipName>Blood_Coordinations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <label>Patient</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Blood_Request__c.District__c</field>
                <operation>notEqual</operation>
                <value>HYDERABAD, VIJAYAWADA</value>
            </filterItems>
            <filterItems>
                <field>Blood_Request__c.Attender_Name__c</field>
                <operation>notEqual</operation>
                <value/>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Blood_Request__c</referenceTo>
        <relationshipLabel>Blood Coordinations</relationshipLabel>
        <relationshipName>Blood_Coordinations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Donar_Name__c</fullName>
        <formula>Donar__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Donar Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blood_Group__c</fullName>
        <formula>TEXT(Donar__r.Blood_Group__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Blood Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Name__c</fullName>
        <formula>Patient__r.Patient_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attender_Contact_Number__c</fullName>
        <formula>Patient__r.Attender_Contact_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attender Contact Number</label>
        <type>Text</type>
    </fields>
</CustomObject>